@@ -39,6 +39,9 @@ __gconv (__gconv_t cd, const unsigned char **inbuf,
   assert (converted != NULL);
   *converted = 0;
 
+  cd->__data[last_step].__outbuf = *outbuf;
+  cd->__data[last_step].__outbufend = outbufend;
+
   if (inbuf == NULL || *inbuf == NULL)
     /* We just flush.  */
     result = DL_CALL_FCT (cd->__steps->__fct,
@@ -49,8 +52,6 @@ __gconv (__gconv_t cd, const unsigned char **inbuf,
       const unsigned char *last_start;
 
       assert (outbuf != NULL && *outbuf != NULL);
-      cd->__data[last_step].__outbuf = *outbuf;
-      cd->__data[last_step].__outbufend = outbufend;
 
       do
 	{
