@@ -1,3 +1,12 @@
+1999-11-25  Ulrich Drepper  <drepper@cygnus.com>
+
+	* iconv/gconv.c (__gconv): Always initialize
+	cd->__data[last_step].__outbuf and cd->__data[last_step].__outbufend.
+
+	* iconvdata/iso-2022-kr.c (EMIT_SHIFT_TO_INIT): Update number of
+	written bytes.
+	* iconvdata/iso-2022-jp.c: Likewise.
+
 1999-11-25  H.J. Lu  <hjl@gnu.org>
 
 	* stdlib/exit.c (exit): Run funtions only if
